Updating dockerfile to be 2 layer

--- a/resources/docker/Dockerfile
+++ b/resources/docker/Dockerfile
@@ -1,23 +1,26 @@
-FROM node:11-alpine
+FROM node:19-alpine as builder
+
 
 # minimal apk dependencies to be safe
 ENV PACKAGES="curl ca-certificates" \
     NODE_ENV="production" \
     HOST="0.0.0.0:8080"
 
+RUN apk add --no-cache $PACKAGES
+
+COPY .  /usr/src/app
 WORKDIR /usr/src/app
 
-COPY package*.json yarn.lock ./
+RUN npm install
+RUN npm install --save babel-cli
+RUN npm run build
 
-RUN apk add --no-cache $PACKAGES && \
-    yarn --prod
-
-COPY . .
-
+FROM node:19-alpine
+COPY --from=builder /usr/src/app/build ./dist
 # Run as non-root user for security
 USER 1000
 
 # Expose app port (8080/tcp)
 EXPOSE 8080
 
-CMD [ "yarn", "start" ]
+CMD [ "node", "start" ]
